[tool.poetry]
name = "turfrouting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
glom = "^23.4.0"
turfpy = "^0.0.7"
mlrose = "^1.3.0"
requests = "^2.31.0"
sklearn = "0.0.post1"
scikit-learn = "^1.3.2"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pudb = "^2023.1"
ipython = "^8.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
